--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "homepage": "https://github.com/rickyplouis/pursuit-of-happyness#readme",
   "dependencies": {
     "@artsy/fresnel": "^1.2.2",
+    "@nivo/radar": "^0.62.0",
     "next": "^9.5.5",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "semantic-ui-react": "^2.0.0",
-    "semantic-ui-css": "^2.4.1"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0"
   },
   "devDependencies": {
     "file-loader": "^3.0.1",
